--- a/weifactory-browser/pom.xml
+++ b/weifactory-browser/pom.xml
@@ -4,6 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>weifactory-browser</artifactId>
   <name>vastsum-browser</name>
+  <packaging>jar</packaging>
   
   <parent>
     <groupId>com.vastsum</groupId>
