--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   
    <properties>
         <vastsum.version>1.0.0-SNAPSHOT</vastsum.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencyManagement>
@@ -34,16 +35,34 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.vastsum.WeifactoryApplication</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
-        </plugins>
+            
+            <plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+			   	<artifactId>maven-compiler-plugin</artifactId>
+			   	<configuration>
+			      <source>1.8</source>
+			      <target>1.8</target>
+			  	</configuration>
+			</plugin>
+		</plugins>
     </build>
     <modules>
     <module>vastsum-schedule</module>
