--- a/vastsum-core/pom.xml
+++ b/vastsum-core/pom.xml
@@ -13,6 +13,8 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+    <skipTests>true</skipTests>
   </properties>
    <dependencies>
         <dependency>
@@ -82,6 +84,19 @@
 		  <artifactId>swagger-bootstrap-ui</artifactId>
 		  <version>1.7</version>
 		</dependency>
+		
+		<!-- <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.0.1</version>
+		</dependency> -->
+		
+		<!-- <dependency>
+		    <groupId>com.github.caspar-chen</groupId>
+		    <artifactId>swagger-ui-layer</artifactId>
+		    <version>0.0.4</version>
+		</dependency> -->
+		
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
@@ -91,7 +106,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -105,5 +119,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        
+        <dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>dubbo</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.zookeeper</groupId>
+		    <artifactId>zookeeper</artifactId>
+		    <version>3.4.11</version>
+		</dependency>
     </dependencies>
 </project>
