--- a/weifactory-browser/pom.xml
+++ b/weifactory-browser/pom.xml
@@ -2,16 +2,18 @@
   
   
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>weifactory-browser</artifactId>
-  <name>vastsum-browser</name>
-  <packaging>jar</packaging>
-  
   <parent>
     <groupId>com.vastsum</groupId>
     <artifactId>weifactory</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+  <artifactId>weifactory-browser</artifactId>
+  <name>weifactory-browser</name>
+  <packaging>jar</packaging>
   
+  <properties>
+  	<skipTests>true</skipTests>
+  </properties>
   <dependencies>
   		<dependency>
   			<groupId>com.vastsum</groupId>
@@ -54,18 +56,6 @@
     <build>
         <finalName>weifactory-browser</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.3.3.RELEASE</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             
             <!-- mybatis-generator根据数据库生成对应实体和Mapping -->
 		      <plugin>
