--- a/pom.xml
+++ b/pom.xml
@@ -37,21 +37,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <version>1.3.3.RELEASE</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.vastsum.WeifactoryApplication</mainClass>
-                        </manifest>
-                    </archive>
+                	<mainClass>com.vastsum.WeifactoryApplication</mainClass>
+                	<layout>ZIP</layout>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>	
             </plugin>
             
             <plugin>
@@ -62,7 +59,7 @@
 			      <target>1.8</target>
 			  	</configuration>
 			</plugin>
-		</plugins>
+        </plugins>
     </build>
     <modules>
     <module>vastsum-schedule</module>
