--- a/weifactory-browser/src/main/resources/application.properties
+++ b/weifactory-browser/src/main/resources/application.properties
@@ -26,13 +26,12 @@ com.vastsum.sms.appkey=24565316
 com.vastsum.sms.secret=9e2d0a97cc87aa2f20c0a081b123b283
 com.vastsum.sms.num-length= 6
 com.vastsum.weifactory.alisms.extend=123456
-com.vastsum.weifactory.alisms.signname=\u5FAE\u690D\u7269\u5DE5\u5382éÇ
+com.vastsum.weifactory.alisms.signname=\u5FAE\u690D\u7269\u5DE5\u5382
 com.vastsum.weifactory.alisms.template-code=SMS_80115048
 com.vastsum.weifactory.alisms.type=normal
-è
 com.vastsum.weifactory.image.host-url=http://img.weifactory.vastsum.net/
 
-com.vastsum.weifactory.image.default-image= a.jpg
+com.vastsum.weifactory.image.default-image= b.jpg
 
 com.vastsum.social.filter-processes-url= /wxLogin
 com.vastsum.social.weixin.app-id=wx1359bcc66ae961aa
