--- a/vastsum-schedule/pom.xml
+++ b/vastsum-schedule/pom.xml
@@ -24,6 +24,41 @@
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 		</dependency>
+		<dependency>
+	      <groupId>org.mybatis.generator</groupId>
+	      <artifactId>mybatis-generator-core</artifactId>
+	      <version>1.3.5</version>
+	    </dependency>
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency> 
+        <!--分页插件-->
+        <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.2.1</version>
+        </dependency>
   </dependencies>
+  
+  <build>
+   	<plugins>
+            <!-- mybatis-generator根据数据库生成对应实体和Mapping -->
+		      <plugin>
+		        <groupId>org.mybatis.generator</groupId>
+		        <artifactId>mybatis-generator-maven-plugin</artifactId>
+		        <version>1.3.5</version>
+		        <configuration>
+		          <configurationFile>src/main/resources/mybatis-generator-config.xml</configurationFile>
+		          <verbose>true</verbose>
+		          <overwrite>true</overwrite>
+		        </configuration>
+		      </plugin>
+        </plugins>
+  </build>
+  
   
 </project>
