--- a/weifactory-browser/pom.xml
+++ b/weifactory-browser/pom.xml
@@ -69,6 +69,23 @@
 		          <overwrite>true</overwrite>
 		        </configuration>
 		      </plugin>
+		      
+		      <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.3.RELEASE</version>
+                <configuration>
+                	<mainClass>com.vastsum.WeifactoryApplication</mainClass>
+                	<layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>	
+            </plugin>
         </plugins>
       <!--  <resources>
 	   		<resource>
