--- a/weifactory-communication/src/main/resources/app.properties
+++ b/weifactory-communication/src/main/resources/app.properties
@@ -1,3 +1,34 @@
 netty.port = 8765
 netty.file.port = 8878
 netty.ip = 121.196.217.247
+
+kqxh1=101
+kqxd1=102
+hxf1=103
+syyy1=104
+pyyy1=105
+yyyxd1=106
+led11=107
+led12=108
+led13=109
+wd1=110
+kqxh2=201
+kqxd2=202
+hxf2=203
+syyy2=204
+pyyy2=205
+yyyxd2=206
+led21=207
+led22=208
+led23=209
+wd2=210
+kqxh3=301
+kqxd3=302
+hxf3=303
+syyy3=304
+pyyy3=305
+yyyxd3=306
+led31=307
+led32=308
+led33=309
+wd3=310
