--- a/vastsum-core/pom.xml
+++ b/vastsum-core/pom.xml
@@ -130,6 +130,22 @@
 		    <groupId>org.apache.zookeeper</groupId>
 		    <artifactId>zookeeper</artifactId>
 		    <version>3.4.11</version>
+		    <exclusions>
+		       <exclusion> 
+		          <groupId>org.slf4j</groupId>
+		          <artifactId>slf4j-log4j12</artifactId>
+		       </exclusion>
+		       <exclusion> 
+		          <groupId>log4j</groupId>
+		          <artifactId>log4j</artifactId>
+		      </exclusion>
+    		</exclusions> 
+		</dependency>
+		
+		<dependency>
+			  <groupId>org.apache.curator</groupId>
+			  <artifactId>curator-framework</artifactId>
+			  <version>2.11.0</version>
 		</dependency>
     </dependencies>
 </project>
