--- a/weifactory-browser/pom.xml
+++ b/weifactory-browser/pom.xml
@@ -13,6 +13,7 @@
   
   <properties>
   	<skipTests>true</skipTests>
+  	<dubbo-spring-boot>1.0.0</dubbo-spring-boot>
   </properties>
   <dependencies>
   		<dependency>
@@ -35,7 +36,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-        </dependency> 
+        </dependency>
         <!--分页插件-->
         <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
         <dependency>
@@ -52,6 +53,12 @@
             <version>1.0</version>
         </dependency>
         
+        <!-- Spring Boot Dubbo 依赖 -->
+       <!--  <dependency>
+            <groupId>io.dubbo.springboot</groupId>
+            <artifactId>spring-boot-starter-dubbo</artifactId>
+            <version>${dubbo-spring-boot}</version>
+        </dependency> -->
     </dependencies>
 
     <build>
