--- a/weifactory-communication/pom.xml
+++ b/weifactory-communication/pom.xml
@@ -79,7 +79,7 @@
         </dependency>
     </dependencies>
     <build>
-        <!--<finalName>communication</finalName>-->
+        <finalName>weifactory-communication</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
