--- a/weifactory-browser/src/main/resources/application.properties
+++ b/weifactory-browser/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true 
+spring.messages.encoding=UTF-8
+
+#国际化支持
+spring.messages.basename=i18n/messages
+#设定加载的资源文件缓存失效时间，-1的话为永不过期，默认为-1
+spring.messages.cache-seconds= 3600
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://121.196.217.247:3306/weifactory?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
