--- a/weifactory-images/pom.xml
+++ b/weifactory-images/pom.xml
@@ -72,12 +72,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
-
-        <!--任务调度-->
-        <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-        </dependency>
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		</dependency>
+        
 
         <dependency>
             <groupId>junit</groupId>
