--- a/weifactory-images/src/main/resources/app.properties
+++ b/weifactory-images/src/main/resources/app.properties
@@ -1,5 +1,7 @@
 netty.file.port = 8235
 netty.ip = 121.196.217.247
-#img.dir = D:/
-img.dir = /www/img_weifactory_vastsum_net/
+img.dir = /Users/shutu008/Pictures/weifactory
+#img.dir = /www/img_weifactory_vastsum_net/
 img.host.dir = http://img.weifactory.vastsum.net/
+response.success=#ZWGC#00000001#0005#002#1#
+parse.failture=#ZWGC#00000001#0005#005#1#
