--- a/weifactory-pay/pom.xml
+++ b/weifactory-pay/pom.xml
@@ -105,7 +105,7 @@
 		<dependency>
 			<groupId>com.alipay.api</groupId>
 			<artifactId>alipay-sdk</artifactId>
-			<version>1.0</version>
+			<version>20180104135026</version>
 		</dependency>
 
 	</dependencies>
