--- a/weifactory-images/pom.xml
+++ b/weifactory-images/pom.xml
@@ -90,26 +90,38 @@
         </dependency>
     </dependencies>
      <build>
-         <!--<finalName>communication</finalName>-->
-         <plugins>
+        <finalName>weifactory-communication</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+			      <source>1.8</source>
+			      <target>1.8</target>
+			   	</configuration>
+                <version>1.3.3.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <!--非必填项，即在生成的jar包名称后面追加该分类名称-->
+                           <!-- <classifier>boot</classifier>-->
+                            <mainClass>com.vastsum.main.ImgServer</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
              <plugin>
-                 <groupId>org.springframework.boot</groupId>
-                 <artifactId>spring-boot-maven-plugin</artifactId>
-                 <version>1.2.5.RELEASE</version>
-                 <executions>
-                     <execution>
-                         <goals>
-                             <goal>repackage</goal>
-                         </goals>
-                         <configuration>
-                             <!--非必填项，即在生成的jar包名称后面追加该分类名称-->
-                             <!-- <classifier>boot</classifier>-->
-                             <mainClass>com.vastsum.main.ImgServer</mainClass>
-                         </configuration>
-                     </execution>
-                 </executions>
-             </plugin>
-         </plugins>
-     </build>
+			   <artifactId>maven-compiler-plugin</artifactId>
+			   <configuration>
+			      <source>1.8</source>
+			      <target>1.8</target>
+			   </configuration>
+			</plugin>
+        </plugins>
+    </build>
 
 </project>
