--- a/weifactory-images/pom.xml
+++ b/weifactory-images/pom.xml
@@ -90,7 +90,7 @@
         </dependency>
     </dependencies>
      <build>
-        <finalName>weifactory-communication</finalName>
+        <finalName>weifactory-images</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
