--- a/weifactory-common/src/main/resources/dataConvert.properties
+++ b/weifactory-common/src/main/resources/dataConvert.properties
@@ -88,5 +88,16 @@ paramSet.dayTemperature3=T0002312
 paramSet.nightTemperature3=T0002313
 paramSet.dayHumidity3=T0002314
 paramSet.nightHumidity3=T0002315 
+paramSet.feedName=T0002401
+paramSet.feedPlantingTime=T0002402
+paramSet.feedRecoveryTim=T0002403
+paramSet.dayFeedBgLength=T0002404
+paramSet.dayFeedBgTime=T0002405
+paramSet.nightFeedBgLength=T0002406
+paramSet.nightFeedBgTime=T0002407
+paramSet.dayFeedWaterLength=T0002408
+paramSet.dayFeedWaterCycle=T0002409
+paramSet.nightFeedWaterLength=T0002410
+paramSet.nightFeedWaterCycle=T0002411
 #系统级设置
 
