--- a/weifactory-common/pom.xml
+++ b/weifactory-common/pom.xml
@@ -31,4 +31,20 @@
             <version>4.2.1</version>
         </dependency>
   </dependencies>
+  
+  <build>
+  	<plugins>
+	    <!-- mybatis-generator根据数据库生成对应实体和Mapping -->
+	     <plugin>
+	       <groupId>org.mybatis.generator</groupId>
+	       <artifactId>mybatis-generator-maven-plugin</artifactId>
+	       <version>1.3.5</version>
+	       <configuration>
+	         <configurationFile>src/main/resources/mybatis-generator-config.xml</configurationFile>
+	         <verbose>true</verbose>
+	         <overwrite>true</overwrite>
+	       </configuration>
+	     </plugin>
+     </plugins>
+  </build>
 </project>
