--- a/weifactory-common/src/main/resources/dataConvert.properties
+++ b/weifactory-common/src/main/resources/dataConvert.properties
@@ -99,5 +99,5 @@ paramSet.dayFeedWaterLength=T0002408
 paramSet.dayFeedWaterCycle=T0002409
 paramSet.nightFeedWaterLength=T0002410
 paramSet.nightFeedWaterCycle=T0002411
-#系统级设置
+#历史数据采集
 
