--- a/weifactory-communication/pom.xml
+++ b/weifactory-communication/pom.xml
@@ -77,7 +77,7 @@
         
         <dependency>
         	<groupId>com.vastsum</groupId>
-        	<artifactId>vastsum-core</artifactId>
+        	<artifactId>weifactory-common</artifactId>
         	<version>${vastsum.version}</version>
         </dependency>
     </dependencies>
