--- a/weifactory-common/src/main/resources/dataConvert.properties
+++ b/weifactory-common/src/main/resources/dataConvert.properties
@@ -99,5 +99,27 @@ paramSet.dayFeedWaterLength=T0002408
 paramSet.dayFeedWaterCycle=T0002409
 paramSet.nightFeedWaterLength=T0002410
 paramSet.nightFeedWaterCycle=T0002411
-#历史数据采集
-
+#生长模式参数设置
+growthPatternParam.growthNo=T0007001
+growthPatternParam.aSc=T0007002
+growthPatternParam.aSy=T0007003
+growthPatternParam.aDayStart=T0007004
+growthPatternParam.aDayEnd=T0007005
+growthPatternParam.aNightStart=T0007006
+growthPatternParam.aNightEnd=T0007007
+growthPatternParam.aDayWindLen=T0007008
+growthPatternParam.aDayWindInterval=T0007009
+growthPatternParam.aNigthWindLen=T0007010
+growthPatternParam.aNightWindInterval=T0007011
+growthPatternParam.bDayBgLen=T0007101
+growthPatternParam.bDayBgInterval=T0007102
+growthPatternParam.bNightBgLen=T0007103
+growthPatternParam.bNightBgInterval=T0007104
+growthPatternParam.bDayYyLen=T0007105
+growthPatternParam.bDayYyInterval=T0007106
+growthPatternParam.bNightYyLen=T0007107
+growthPatternParam.bNightYyInterval=T0007108
+growthPatternParam.bDayTemperature=T0007109
+growthPatternParam.bNightTemperature=T0007110
+growthPatternParam.bDayHumidity=T0007111
+growthPatternParam.bNightHumidity=T0007112
