--- a/weifactory-browser/src/main/resources/application.properties
+++ b/weifactory-browser/src/main/resources/application.properties
@@ -31,12 +31,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 com.vastsum.sms.url=http://gw.api.taobao.com/router/rest
-com.vastsum.sms.appkey=24565316
-com.vastsum.sms.secret=9e2d0a97cc87aa2f20c0a081b123b283
+com.vastsum.sms.appkey=LTAI1YHNkiVVWSrc
+com.vastsum.sms.secret=n1EZGsof32RNWBEpiiMLtDkrFNFl6C
 com.vastsum.sms.num-length= 6
 com.vastsum.weifactory.alisms.extend=123456
-com.vastsum.weifactory.alisms.signname=\u5FAE\u690D\u7269\u5DE5\u5382
-com.vastsum.weifactory.alisms.template-code=SMS_80115048
+com.vastsum.weifactory.alisms.signname=\u690d\u7269\u5de5\u5382
+com.vastsum.weifactory.alisms.template-code=SMS_134170282
 com.vastsum.weifactory.alisms.type=normal
 com.vastsum.weifactory.image.host-url=http://img.weifactory.vastsum.net/
 
