--- a/weifactory-browser/pom.xml
+++ b/weifactory-browser/pom.xml
@@ -47,6 +47,17 @@
             <version>${dubbo-spring-boot}</version>
         </dependency> -->
         
+        <dependency>
+		  <groupId>com.aliyun</groupId>
+		  <artifactId>aliyun-java-sdk-core</artifactId>
+		  <version>3.2.8</version>
+		</dependency>
+		<dependency>
+		<groupId>com.aliyun</groupId>
+		<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+		<version>1.1.0</version>
+		</dependency>
+        
          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-integration</artifactId>
