--- a/weifactory-common/src/main/resources/dataConvert.properties
+++ b/weifactory-common/src/main/resources/dataConvert.properties
@@ -39,8 +39,8 @@ paramSet.dayStartTime=T0002903
 paramSet.dayEndTime=T0002904
 paramSet.nightStartTime=T0002905
 paramSet.nightEndTime=T0002906
-paramSet.dayWindLenghtTime=T0002907
-paramSet.dayWindCycleTime=T0002908
+paramSet.dayNewWindLength=T0002907
+paramSet.dayNewWindTime=T0002908
 paramSet.nightNewWindLength=T0002909
 paramSet.nightNewWindTime=T0002910
 paramSet.batchNo1=T0002101
